// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transfer should render correctly 1`] = `
<div class="gov-transfer">
  <div class="gov-transfer-list">
    <div class="gov-transfer-list-header"><label class="gov-checkbox-wrapper gov-checkbox-wrapper-checked"><span class="gov-checkbox gov-checkbox-checked"><input type="checkbox" checked="checked" class="gov-checkbox-input"><span class="gov-checkbox-inner"></span></span></label><span class="gov-transfer-list-header-selected"><span>1/2 项</span><span class="gov-transfer-list-header-title"></span></span></div>
    <div class="gov-transfer-list-body"><span tag="ul" class="gov-transfer-list-content"><li class="gov-transfer-list-content-item"><label class="gov-checkbox-wrapper gov-checkbox-wrapper-checked"><span class="gov-checkbox gov-checkbox-checked"><input type="checkbox" checked="checked" class="gov-checkbox-input"><span class="gov-checkbox-inner"></span></span></label><span></span></li>
      <li class="gov-transfer-list-content-item gov-transfer-list-content-item-disabled"><label class="gov-checkbox-wrapper gov-checkbox-wrapper-disabled"><span class="gov-checkbox gov-checkbox-disabled"><input type="checkbox" disabled="disabled" class="gov-checkbox-input"><span class="gov-checkbox-inner"></span></span></label><span></span></li>
      </span></div>
  </div>
  <div class="gov-transfer-operation"><button type="button" class="gov-btn gov-btn-primary gov-btn-sm"><i class="anticon anticon-right"><svg viewBox="64 64 896 896" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true">
          <path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"></path>
        </svg></i></button><button disabled="disabled" type="button" class="gov-btn gov-btn-primary gov-btn-sm"><i class="anticon anticon-left"><svg viewBox="64 64 896 896" data-icon="left" width="1em" height="1em" fill="currentColor" aria-hidden="true">
          <path d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"></path>
        </svg></i></button></div>
  <div class="gov-transfer-list">
    <div class="gov-transfer-list-header"><label class="gov-checkbox-wrapper"><span class="gov-checkbox"><input type="checkbox" class="gov-checkbox-input"><span class="gov-checkbox-inner"></span></span></label><span class="gov-transfer-list-header-selected"><span>1 项</span><span class="gov-transfer-list-header-title"></span></span></div>
    <div class="gov-transfer-list-body"><span tag="ul" class="gov-transfer-list-content"><li class="gov-transfer-list-content-item"><label class="gov-checkbox-wrapper"><span class="gov-checkbox"><input type="checkbox" class="gov-checkbox-input"><span class="gov-checkbox-inner"></span></span></label><span></span></li></span></div>
  </div>
</div>
`;

exports[`Transfer should show sorted targetkey 1`] = `
<div class="gov-transfer">
  <div class="gov-transfer-list">
    <div class="gov-transfer-list-header"><label class="gov-checkbox-wrapper"><span class="gov-checkbox"><input type="checkbox" class="gov-checkbox-input"><span class="gov-checkbox-inner"></span></span></label><span class="gov-transfer-list-header-selected"><span>1 项</span><span class="gov-transfer-list-header-title"></span></span></div>
    <div class="gov-transfer-list-body"><span tag="ul" class="gov-transfer-list-content"><li title="a" class="gov-transfer-list-content-item"><label class="gov-checkbox-wrapper"><span class="gov-checkbox"><input type="checkbox" class="gov-checkbox-input"><span class="gov-checkbox-inner"></span></span></label><span>a</span></li></span></div>
  </div>
  <div class="gov-transfer-operation"><button disabled="disabled" type="button" class="gov-btn gov-btn-primary gov-btn-sm"><i class="anticon anticon-right"><svg viewBox="64 64 896 896" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true">
          <path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"></path>
        </svg></i></button><button disabled="disabled" type="button" class="gov-btn gov-btn-primary gov-btn-sm"><i class="anticon anticon-left"><svg viewBox="64 64 896 896" data-icon="left" width="1em" height="1em" fill="currentColor" aria-hidden="true">
          <path d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 0 0 0 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"></path>
        </svg></i></button></div>
  <div class="gov-transfer-list">
    <div class="gov-transfer-list-header"><label class="gov-checkbox-wrapper"><span class="gov-checkbox"><input type="checkbox" class="gov-checkbox-input"><span class="gov-checkbox-inner"></span></span></label><span class="gov-transfer-list-header-selected"><span>2 项</span><span class="gov-transfer-list-header-title"></span></span></div>
    <div class="gov-transfer-list-body"><span tag="ul" class="gov-transfer-list-content"><li title="c" class="gov-transfer-list-content-item"><label class="gov-checkbox-wrapper"><span class="gov-checkbox"><input type="checkbox" class="gov-checkbox-input"><span class="gov-checkbox-inner"></span></span></label><span>c</span></li>
      <li title="b" class="gov-transfer-list-content-item"><label class="gov-checkbox-wrapper"><span class="gov-checkbox"><input type="checkbox" class="gov-checkbox-input"><span class="gov-checkbox-inner"></span></span></label><span>b</span></li>
      </span></div>
  </div>
</div>
`;
